-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b21
-
generic
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8220139 | 11.0.4-oracle | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8215266 | 11.0.3 | Matthias Baesken | P3 | Resolved | Fixed | master |
| JDK-8220415 | openjdk8u212 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8217885 | 8u222 | Fairoz Matte | P3 | Resolved | Fixed | master |
| JDK-8217847 | 8u221 | Fairoz Matte | P3 | Resolved | Fixed | b02 |
| JDK-8224285 | emb-8u221 | Fairoz Matte | P3 | Resolved | Fixed | b02 |
| JDK-8218600 | 7u231 | Fairoz Matte | P3 | Resolved | Fixed | b01 |
in java.base/windows/native/libjava/java_props_md.c does not recognize Windows Server 2019 (to be released in October 2019).
Windows Server 2019 is currently recognized as "Windows Server 2016" which is put into the os name system property (plus printed in the hs_err file).
A fix is to add a check for the buildNumber which could be used to distinguish the versions.
- backported by
-
JDK-8215266 [windows] Update OS detection code to recognize Windows Server 2019
-
- Resolved
-
-
JDK-8217847 [windows] Update OS detection code to recognize Windows Server 2019
-
- Resolved
-
-
JDK-8217885 [windows] Update OS detection code to recognize Windows Server 2019
-
- Resolved
-
-
JDK-8218600 [windows] Update OS detection code to recognize Windows Server 2019
-
- Resolved
-
-
JDK-8220139 [windows] Update OS detection code to recognize Windows Server 2019
-
- Resolved
-
-
JDK-8220415 [windows] Update OS detection code to recognize Windows Server 2019
-
- Resolved
-
-
JDK-8224285 [windows] Update OS detection code to recognize Windows Server 2019
-
- Resolved
-
- duplicates
-
JDK-8217780 os.name returns Windows Server 2016 on Windows Server 2019
-
- Closed
-
-
JDK-8223294 Update OS detection code to recognize Windows Server 2019
-
- Closed
-
- relates to
-
JDK-8273229 Update OS detection code to recognize Windows Server 2022
-
- Resolved
-
-
JDK-8223294 Update OS detection code to recognize Windows Server 2019
-
- Closed
-