8211106: [windows] Update OS detection code to recognize Windows Server 2019

Reviewed-by: alanb, clanger, bobv